--- a/foundry.toml
+++ b/foundry.toml
@@ -3,5 +3,12 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings = ["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts"]
+somnia = "https://vsf-rpc.somnia.network/"
+private_key = "${PRIVATE_KEY}"
+fs_permissions = [
+    { access = "read", path = "./images/" },
+    { access = "read", path = "./broadcast" },
+]
+ffi = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
